--- a/index.html
+++ b/index.html
@@ -39,5 +39,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="./bundle.js"></script></body>
+  <script type="text/javascript" src="/react-tiger-transition/bundle.js"></script></body>
 </html>
