invert nav colors

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>React Tiger Transition</title>
     <meta name="viewport" content="initial-scale=1.0">
+    <meta name="theme-color" content="#263238">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
