--- a/404.html
+++ b/404.html
@@ -9,5 +9,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="bundle.js"></script></body>
+  <script type="text/javascript" src="https://pedrobern.github.io/react-tiger-transition/bundle.js"></script></body>
 </html>
