--- a/404.html
+++ b/404.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="theme-color" content="#263238">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-152567868-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-152567868-1');
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
