--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       gtag('config', 'UA-152567868-1');
     </script>
 
-  </head>
+  <link rel="shortcut icon" href="https://pedrobern.github.io/react-tiger-transition/favicon-16x16.png"></head>
   <body>
     <div id="root"></div>
   <script type="text/javascript" src="https://pedrobern.github.io/react-tiger-transition/bundle.js"></script></body>
